feat(tests): add native fullscreen test and enhance category source handling
- Introduced a new test for native fullscreen functionality in the video player, ensuring proper integration with the native environment.
- Enhanced the handling of custom sources in category settings and lifecycle tests, ensuring accurate source descriptions and category resolutions.
- Updated the `LocalStreamProxy` to handle URL decoding more robustly, preventing potential crashes on older Android versions.
- Improved the source ID validation logic in presets to accommodate custom sources, ensuring consistent behavior across the application.

These changes aim to improve the reliability and functionality of media handling and category management within the application.